2009-11-22  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed.

        [Qt] Sort source lists and remove obsolete comments 
        from the build system.

        * JavaScriptCore.pri:

2009-11-21  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        [Qt][Mac] Turn on multiple JavaScript threads for QtWebkit on Mac
        https://bugs.webkit.org/show_bug.cgi?id=31753

        * wtf/Platform.h:

2009-11-19  Steve Block  <steveblock@google.com>

        Android port lacks configuration in Platform.h and config.h.
        https://bugs.webkit.org/show_bug.cgi?id=31671

        * wtf/Platform.h: Modified. Added Android-specific configuration.

2009-11-19  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=31690
        Make SocketStreamHandleCFNet work on Windows

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * wtf/MainThread.cpp:
        (WTF::FunctionWithContext::FunctionWithContext):
        (WTF::dispatchFunctionsFromMainThread):
        (WTF::callOnMainThreadAndWait):
        * wtf/MainThread.h:
        Re-add callOnMainThreadAndWait(), which was removed in bug 23926.

2009-11-19  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Levin.

        isMainThread() on Chromium (Mac and Linux) is so slow it timeouts LayoutTests..
        https://bugs.webkit.org/show_bug.cgi?id=31693

        * wtf/ThreadingPthreads.cpp:
        (WTF::initializeThreading): grab and use the pthread_t of the main thread instead of ThreadIdentifier.
        (WTF::isMainThread): Ditto.

2009-11-19  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        Remove HAVE(STRING_H) guard from JavaScriptCore
        https://bugs.webkit.org/show_bug.cgi?id=31668

        * config.h:
        * runtime/UString.cpp:

2009-11-19  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Dmitry Titov.
